# opengl-engine

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  todo.txt
assets/shaders/: common.frag  phong.fs  red_color.frag  simple.vert  skinned.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
docs/: architecture-uml.md
include/: Animation.h  Animator.h  BindableTexture.h  Camera.h  CubeMapTexture.h  DebugOverlay.h  GltfLoader.h  InputManager.h  Level.h  Logger.h  MemoryTracker.h  Mesh.h  PathUtils.h  PhysicsWorld.h  PlayerController.h  RenderObject.h  Renderer.h  Shader.h  ShadersLib.h  Sky.h  Terrain.h  TerrainGenerator.h  Texture.h  Window.h  camera.h  fps_counter.h  game.h  input_manager.h  light.h  logger.h  render_object.h  scene.h  scene_loader.h  settings.h  shader.h  shaders_lib.h  texture.h  timer.h  window.h
include/Assets/: ResourceManager.h
include/Utils/: Logger.h
include/core/: FPSCounter.h  MathUtils.h  Timer.h
include/glad/: glad.h
include/input_system/: input_system_subscriber.h
src/: Animator.cpp  Camera.cpp  CubeMapTexture.cpp  DebugOverlay.cpp  GltfLoader.cpp  InputManager.cpp  Level.cpp  MemoryTracker.cpp  Mesh.cpp  PathUtils.cpp  PhysicsWorld.cpp  PlayerController.cpp  RenderObject.cpp  Renderer.cpp  Shader.cpp  Sky.cpp  Terrain.cpp  TerrainGenerator.cpp  Texture.cpp  Window.cpp  camera.cpp  game.cpp  glad.c  input_manager.cpp  light.cpp  main.cpp  render_object.cpp  scene.cpp  scene_loader.cpp  settings.h  shader.cpp  shaders.h  texture.cpp  window.cpp
src/Assets/: ResourceManager.cpp
src/Utils/: MemoryTracker.cpp  PathUtils.cpp
